Fix file input vertical alignment in IE

--- a/less/forms.less
+++ b/less/forms.less
@@ -112,7 +112,7 @@ select,
 input[type="file"] {
   height: 28px; /* In IE7, the height of the select element cannot be changed by height, only font-size */
   *margin-top: 4px; /* For IE7, add top margin to align select with labels */
-  line-height: 28px;
+  line-height: 18px;
 }
 
 // Chrome on Linux and Mobile Safari need background-color
